<resources>
    <string name="app_name">MultiScreen Demo</string>
    <string name="action_login">Log in</string>
    <string name="action_forgotPassword">Forgot Password</string>
    <string name="action_createAccount">Create an account</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>

    <string name="component_confirmation">Confirmation</string>
</resources>